Deleated all unnecessary images, phone.js

--- a/src/html/components/home/about.html
+++ b/src/html/components/home/about.html
@@ -4,7 +4,7 @@
     <div>
       <img
         loading="lazy"
-        src="./assets/image/features-img.jpg"
+        src="./assets/image/about_1_img_1.jpg"
         width="585"
         height="651"
         alt="Woman typing on laptop"
@@ -12,27 +12,27 @@
     </div>
     <div class="about_1_1_1">
       <h2 class="about_1_1_1_1 heading-h2" id="about_1_1_1_1_text">
-        Passion to increase company revenue up to 85%
+        Committed to driving growth and success for your business
       </h2>
       <p class="about_1_1_1_1_1 text-p-medium" id="about_1_1_1_1_1_text">
-        Automate your sales, marketing and service in one platform. Avoid date
-        leaks and enable consistent messaging
+        Streamline operations with our all-in-one solution. Ensure smooth
+        workflows and enhance communication across teams.
       </p>
       <ul>
         <li class="about_1_1_1_1_1_1">
           <p class="text-p-medium" id="about_1_1_1_1_1_1_1_text">
-            Close more deals with single - page contact managment
+            Improve collaboration with easy-to-use project management tools
           </p>
         </li>
         <li class="about_1_1_1_1_1_1">
           <p class="text-p-medium" id="about_1_1_1_1_1_1_1_1_text">
-            Enjoy one-click calling, call scripts and voicemail automation
+            Boost productivity with seamless integrations and time-saving
+            features
           </p>
         </li>
         <li class="about_1_1_1_1_1_1">
           <p class="text-p-medium" id="about_1_1_1_1_1_1_1_1_1_text">
-            Take stages and milestones of your deals to keep the sales process
-            an track
+            Track progress and results with real-time analytics and insights
           </p>
         </li>
       </ul>
