--- a/src/html/components/home/reviews.html
+++ b/src/html/components/home/reviews.html
@@ -3,11 +3,11 @@
   <div class="container">
     <div class="reviews_1_1_1">
       <h2 class="reviews_1_1_1_1 heading-h2" id="reviews_1_1_1_1_text">
-        What our customer are saying
+        What our customers are saying
       </h2>
       <p class="reviews_1_1_1_1_1 text-p-medium" id="reviews_1_1_1_1_1_text">
-        We are trusted numerous companies from different business to meet their
-        needs
+        We are trusted by numerous companies from various industries to meet
+        their needs.
       </p>
     </div>
     <div class="reviews_1__slider-wrapper reviews_1_1_1_1_1_1">
@@ -32,11 +32,11 @@
             </div>
             <p
               class="reviews_1__comment-text heading-h3 reviews_1_1_1_1_1_1_1_1_1_1_1_1"
-              id="reviews_1_1_1_1_1_1_1_1_1_1_1_1_text"
+              id="reviews_1_1_1_1_1_1_1_1_1_1_1_1_1_1_text"
             >
-              “With Agency the results are very satisfying. Wrapped with high
-              quality and innovative design that makes a surge of visitors on my
-              website.”
+              “The results were highly satisfying. The project was completed
+              with a high level of quality and innovation, resulting in a
+              significant increase in website traffic.”
             </p>
             <address
               class="reviews_1__comment-author reviews_1_1_1_1_1_1_1_1_1_1_1_1"
@@ -81,9 +81,9 @@
               class="reviews_1__comment-text heading-h3 reviews_1_1_1_1_1_1_1_1_1_1_1_1"
               id="reviews_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_text"
             >
-              “The service exceeded my expectations. The team delivered
-              top-notch quality with great attention to detail, resulting in a
-              significant increase in engagement.”
+              “The service truly exceeded my expectations. The team delivered
+              top-tier quality with impeccable attention to detail, which led to
+              a noticeable increase in user engagement.”
             </p>
             <address
               class="reviews_1__comment-author reviews_1_1_1_1_1_1_1_1_1_1_1_1"
@@ -128,9 +128,9 @@
               class="reviews_1__comment-text heading-h3 reviews_1_1_1_1_1_1_1_1_1_1_1_1"
               id="reviews_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1_text"
             >
-              “Working with this agency has been a game-changer. The results
-              were incredible, and they took the time to understand our vision.
-              Highly recommend!”
+              “Working with this team was an absolute game-changer. The results
+              were outstanding, and they truly took the time to understand our
+              goals and deliver the perfect solution. Highly recommended!”
             </p>
             <address
               class="reviews_1__comment-author reviews_1_1_1_1_1_1_1_1_1_1_1_1"
