Changed build settings

--- a/src/html/components/home/contact.html
+++ b/src/html/components/home/contact.html
@@ -6,7 +6,7 @@
         class="contact_1__form-title heading-h4 contact_1_1_1_1_1"
         id="contact_1_1_1_1_1_text"
       >
-        Let’s level up your brand
+        Let’s Connect
       </h3>
       <p class="contact_1__form-text text-p-medium contact_1_1_1_1_1_1">
         You can reach us anytime
@@ -15,7 +15,7 @@
           href="mail:hellosansbrothers@gmail.com"
           id="contact_1_1_1_1_1_1_1_text"
         >
-          hellosansbrothers@gmail.com
+          example@gmail.com
         </a>
       </p>
       <form class="contact_1__form contact_1_1_1_1_1_1_1_1" id="form">
@@ -79,7 +79,7 @@
             class="contact_1__form-input text-p-small contact_1_1_1_1_1_1_1_1_1_1_1_1"
             name="phone"
             itemid="phone"
-            placeholder=""
+            placeholder="+123 45 678 910"
           />
           <small
             class="contact_1__form-label-error contact_1_1_1_1_1_1_1_1_1_1_1_1_1"
