Fixed anchor links

--- a/src/html/components/footer.html
+++ b/src/html/components/footer.html
@@ -35,7 +35,7 @@
               <li class="footer_1_1_1_1_1_1_1_1_1_1_1">
                 <a
                   class="footer_1_1_1_1_1_1_1_1_1_1_1_1"
-                  href="/coca/services.html"
+                  href="/coca/#services"
                   id="footer_1_3_1_1_2_1_1_text"
                 >
                   Services
@@ -44,19 +44,19 @@
               <li class="footer_1_1_1_1_1_1_1_1_1_1_1">
                 <a
                   class="footer_1_1_1_1_1_1_1_1_1_1_1_1"
-                  href="/coca/contact.html"
+                  href="/coca/#about"
                   id="footer_1_3_1_1_2_1_1_text"
                 >
-                  Contact
+                  About
                 </a>
               </li>
               <li class="footer_1_1_1_1_1_1_1_1_1_1_1">
                 <a
                   class="footer_1_1_1_1_1_1_1_1_1_1_1_1"
-                  href="/coca/pricing.html"
+                  href="/coca/#contact"
                   id="footer_1_3_1_1_2_1_1_text"
                 >
-                  Pricing
+                  Contact
                 </a>
               </li>
             </ul>
