--- a/src/html/components/home/about.html
+++ b/src/html/components/home/about.html
@@ -1,5 +1,5 @@
 <!--========ABOUT START========  -->
-<section class="about_1">
+<section class="about_1" id="about">
   <div class="container about_1_1">
     <div>
       <img
