--- a/src/html/components/home/contact.html
+++ b/src/html/components/home/contact.html
@@ -1,6 +1,6 @@
 <!--========CONTACT START========  -->
 <section class="contact_1 contact_1_1" id="get-started">
-  <div class="container contact_1__container contact_1_1_1">
+  <div class="container contact_1__container contact_1_1_1" id="contact">
     <div class="contact_1__form-wrapper contact_1_1_1_1">
       <h3
         class="contact_1__form-title heading-h4 contact_1_1_1_1_1"
