--- a/src/html/components/home/service.html
+++ b/src/html/components/home/service.html
@@ -1,5 +1,5 @@
 <!--========SERVICE START========  -->
-<section class="service_1">
+<section class="service_1" id="services">
   <div class="container">
     <h2 class="service_1_1 heading-h2" id="service_1_1_text">
       We help businesses optimize operations and enhance efficiency
