--- a/src/html/components/header.html
+++ b/src/html/components/header.html
@@ -29,7 +29,7 @@
           <li class="nav_1_1_1_1_1_1_1 text-p-default">
             <a
               class="nav_1_1_1_1_1_1_1"
-              href="/coca/#about"
+              href="/#about"
               id="nav_1_1_1_1_1_1_1_1_text"
               >About</a
             >
@@ -37,7 +37,7 @@
           <li class="nav_1_1_1_1_1_1_1 text-p-default">
             <a
               class="nav_1_1_1_1_1_1_1"
-              href="/coca/#services"
+              href="/#services"
               id="nav_1_1_1_1_1_1_1_1_1_text"
               >Services</a
             >
@@ -45,7 +45,7 @@
           <li class="nav_1_1_1_1_1_1_1 text-p-default">
             <a
               class="nav_1_1_1_1_1_1_1"
-              href="/coca/#contact"
+              href="/#contact"
               id="nav_1_1_1_1_1_1_1_1_1_1_text"
               >Contact</a
             >
