Removed / and /coca/ from links

--- a/src/html/components/footer.html
+++ b/src/html/components/footer.html
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="footer_1_1">
       <div class="footer_1_1_1">
-        <a class="footer_1_1_1_1" href="/coca/" aria-label="Home page">
+        <a class="footer_1_1_1_1" href="/" aria-label="Home page">
           <img
             loading="lazy"
             src="./assets/image/footer_1_img_1.png"
@@ -27,7 +27,7 @@
               <li class="footer_1_1_1_1_1_1_1_1_1_1_1">
                 <a
                   class="footer_1_1_1_1_1_1_1_1_1_1_1_1"
-                  href="/coca/"
+                  href="/"
                   id="footer_1_3_1_1_2_1_1_text"
                   >Home</a
                 >
@@ -35,7 +35,7 @@
               <li class="footer_1_1_1_1_1_1_1_1_1_1_1">
                 <a
                   class="footer_1_1_1_1_1_1_1_1_1_1_1_1"
-                  href="/coca/#services"
+                  href="#services"
                   id="footer_1_3_1_1_2_1_1_text"
                 >
                   Services
@@ -44,7 +44,7 @@
               <li class="footer_1_1_1_1_1_1_1_1_1_1_1">
                 <a
                   class="footer_1_1_1_1_1_1_1_1_1_1_1_1"
-                  href="/coca/#about"
+                  href="#about"
                   id="footer_1_3_1_1_2_1_1_text"
                 >
                   About
@@ -53,7 +53,7 @@
               <li class="footer_1_1_1_1_1_1_1_1_1_1_1">
                 <a
                   class="footer_1_1_1_1_1_1_1_1_1_1_1_1"
-                  href="/coca/#contact"
+                  href="#contact"
                   id="footer_1_3_1_1_2_1_1_text"
                 >
                   Contact
