--- a/src/html/components/header.html
+++ b/src/html/components/header.html
@@ -21,7 +21,7 @@
           <li class="nav_1_1_1_1_1_1_1">
             <a
               class="nav_1_1_1_1_1_1_1 text-p-default"
-              href="/coca/"
+              href="/"
               id="nav_1_1_1_1_1_1_1_text"
               >Home</a
             >
