All links changed to relative

--- a/src/html/components/footer.html
+++ b/src/html/components/footer.html
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="footer_1_1">
       <div class="footer_1_1_1">
-        <a class="footer_1_1_1_1" href="/" aria-label="Home page">
+        <a class="footer_1_1_1_1" href="#" aria-label="Home page">
           <img
             loading="lazy"
             src="./assets/image/footer_1_img_1.png"
@@ -27,7 +27,7 @@
               <li class="footer_1_1_1_1_1_1_1_1_1_1_1">
                 <a
                   class="footer_1_1_1_1_1_1_1_1_1_1_1_1"
-                  href="/"
+                  href="#"
                   id="footer_1_3_1_1_2_1_1_text"
                   >Home</a
                 >
