--- a/src/html/components/header.html
+++ b/src/html/components/header.html
@@ -6,7 +6,7 @@
   id="header_text"
 >
   <div class="container nav_1_1">
-    <a href="/coca/" class="nav_1_1_1" aria-label="Home page">
+    <a href="#" class="nav_1_1_1" aria-label="Home page">
       <img
         loading="lazy"
         src="./assets/image/header_1_img_1.png"
@@ -21,7 +21,7 @@
           <li class="nav_1_1_1_1_1_1_1">
             <a
               class="nav_1_1_1_1_1_1_1 text-p-default"
-              href="/"
+              href="#"
               id="nav_1_1_1_1_1_1_1_text"
               >Home</a
             >
@@ -29,7 +29,7 @@
           <li class="nav_1_1_1_1_1_1_1 text-p-default">
             <a
               class="nav_1_1_1_1_1_1_1"
-              href="/#about"
+              href="#about"
               id="nav_1_1_1_1_1_1_1_1_text"
               >About</a
             >
@@ -37,7 +37,7 @@
           <li class="nav_1_1_1_1_1_1_1 text-p-default">
             <a
               class="nav_1_1_1_1_1_1_1"
-              href="/#services"
+              href="#services"
               id="nav_1_1_1_1_1_1_1_1_1_text"
               >Services</a
             >
@@ -45,7 +45,7 @@
           <li class="nav_1_1_1_1_1_1_1 text-p-default">
             <a
               class="nav_1_1_1_1_1_1_1"
-              href="/#contact"
+              href="#contact"
               id="nav_1_1_1_1_1_1_1_1_1_1_text"
               >Contact</a
             >
